# ComPro-Project

./: .gitignore  CMakeLists.txt  Card.h  Custom_Page.cpp  Custom_Page.h  Custom_Pages.cpp  Custom_Pages.h  Data.cpp  FlowerRender.cpp  FlowerRender.h  FlowerRenderer.cpp  FlowerRenderer.h  Random_Pages.cpp  Summary_Page.cpp  app_ready.cpp  app_ready.h  app_state.h  card.cpp  config.h  confirm.cpp  confirm.h  data_models.h  data_repository.cpp  example main.cpp  examplemain.cpp  font_manager.cpp  for_testing.h  i_chom.cpp  main.cpp  main.h  tasks.json  tempCodeRunnerFile.cpp  texture_manager.h  ui_banner.cpp  ui_banner.h  ui_loading.cpp  ui_loading.h  ui_mainmenu.cpp  ui_mainmenu.h  ui_preset_page.cpp  (+3 more)
Pao/: main.cpp
Receipt/: receipt_20260304_014230.txt  receipt_20260304_014604.txt  receipt_20260304_211738.txt  receipt_20260305_001822.txt  receipt_20260307_222101.txt
assets/flowers/: Chamomile.cpp  Daisy.cpp  Lavender.cpp  Peony.cpp  Rose.cpp  Sunflower.cpp
flowers/: Dahlia.cpp  Hydrangea.cpp  Jasmine.cpp  Lotus.cpp  Marigold.cpp  Orchid.cpp  Poppy.cpp  Tulip.cpp
include/: AppState.h  Config.h  DataModels.h  SubCustom.h
include/core/: FontManager.h
include/render/: FlowerRender.h
include/ui/: Card.h  Confirm.h  Custom.h  MainMenu.h  Preset.h  Start.h
src/: main.cpp
src/core/: FontManager.cpp
src/data/: DataRepository.cpp
src/render/: FlowerRender.cpp
src/ui/: Custom.cpp  MainMenu.cpp  Preset.cpp  Random.cpp  Start.cpp  Summary.cpp
